style citation links, style alerts, fix modal z-index

--- a/app/styles/ember-rdfa-editor/_c-link-list.scss
+++ b/app/styles/ember-rdfa-editor/_c-link-list.scss
@@ -22,17 +22,25 @@
 }
 
 .say-link-list__link {
+  @include say-font-size($say-base,1.3);
+  font-family: $say-font;
+  border: 0;
+  outline: 0;
+  appearance: none;
   display: block;
+  width: 100%;
   padding: $say-unit-small;
   position: relative;
   color: $say-neutral-700;
+  text-decoration: underline;
   text-decoration-color: $say-neutral-300;
   transition: color $say-transition;
+  text-align: left;
 
   &:hover,
   &:focus {
     color: $say-neutral-600;
-    text-decoration-color: $say-neutral-300;
+    text-decoration: none;
   }
 
   &:focus {
@@ -42,6 +50,7 @@
 }
 
 .say-link-list__link--arrow {
+  @include say-font-size($say-h6);
   position: relative;
   padding: $say-unit-small $say-unit-large + $say-unit-tiny $say-unit-small $say-unit-small;
 
