--- a/app/styles/ember-rdfa-editor/_shame.scss
+++ b/app/styles/ember-rdfa-editor/_shame.scss
@@ -56,6 +56,7 @@
 // Temporary fix for nested cards
 .say-card .say-card {
   box-shadow: none;
+  position: relative;
 }
 
 .say-card ul li div.u-hr {
